--- a/css/vandors/dark.css
+++ b/css/vandors/dark.css
@@ -9,16 +9,22 @@
 .dark-theem .work .heading-section::after,
 .dark-theem .work .heading-section::before,
 .dark-theem .abuot .heading-section::after,
-.dark-theem .abuot .heading-section::before {
+.dark-theem .btn-effct::before,
+.dark-theem .close,
+.dark-theem .abuot .heading-section::before,
+.dark-theem .navbar .nav-link::before {
     background-color: var(--with);
 }
-.dark-theem .btn-effct::before {
-    background-color: var(--with);
+.dark-theem .navbar .nav-link,
+.dark-theem .work .content-work .work-link,
+.dark-theem .abuot-title {
+    color: var(--with);
 }
-.dark-theem .close {
-    background-color: var(--with);
-}
-.dark-theem .navbar {
+.dark-theem .navbar,
+.dark-theem .box-dark .dark,
+.dark-theem .link-popup.btn-effct::before,
+.dark-theem footer,
+.dark-theem .content-popup-work .close {
     background-color: var(--mainColor);
 }
 .dark-theem .content-nav .logo-imge img {
@@ -28,42 +34,18 @@
     border: 1px solid var(--with);
     background-color: var(--with);
 }
-.dark-theem .box-dark .dark {
-    background-color: var(--mainColor);
-}
-.dark-theem .navbar .nav-link {
-    color: var(--with);
-}
-.dark-theem .navbar .nav-link:hover {
+.dark-theem .navbar .nav-link:hover,
+.dark-theem .btn-contact:hover,
+.dark-theem .work .content-work .work-link:hover {
     color: var(--mainColor);
-}
-.dark-theem .navbar .nav-link::before {
-    background-color: var(--with);
 }
 .dark-theem .nav-link.active {
     background-color: var(--with);
     color: var(--mainColor) !important;
 }
-.dark-theem .work .content-work .work-link {
-    color: var(--with);
-}
-.dark-theem .work .content-work .work-link:hover {
-    color: var(--mainColor);
-}
-.dark-theem .content-popup-work .close {
-    background-color: var(--mainColor);
-}
-.dark-theem .link-popup.btn-effct::before {
-    background-color: var(--mainColor);
-}
-.dark-theem .btn-contact:hover {
-    color: var(--mainColor);
-}
+
 .dark-theem .contact .box-content {
     border: 1px solid var(--with);
-}
-.dark-theem footer {
-    background-color: var(--mainColor);
 }
 .dark-theem .copy {
     border-top: 1px solid var(--with);
