--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,6 @@ body {
 }
 .close {
   display: block;
-  width: 100%;
   height: 2px;
   margin: 5px 0;
   background-color: var(--mainColor);
@@ -147,17 +146,17 @@ body {
   margin-left: auto;
   transition: transform 0.4s;
 }
-.icon:hover .close:nth-child(1) {
-  transform: translate(0, 0px);
-}
-.icon:hover .close:nth-child(2) {
-  transform: translate(0, -6px);
-}
 .icon .close:nth-child(1) {
   transform: rotate(47deg) translate(0px, 0px);
 }
 .icon .close:nth-child(2) {
   transform: rotate(125deg) translate(-6px, 4px);
+}
+.icon:hover .close:nth-child(1) {
+  transform: translate(0, 0px);
+}
+.icon:hover .close:nth-child(2) {
+  transform: translate(0, -6px);
 }
 /* --------------------------
 2- Start Nav */
@@ -171,6 +170,14 @@ nav {
   z-index: 2;
   top: 0;
   background-color: var(--mainColor);
+}
+.content-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  background-color: rgba(0,0,0,.5);
+  height: 100vh;
 }
 .logo {
   color: var(--with);
