--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9;
+  z-index: 7;
   background-color: rgba(0,0,0,.5);
   height: 100vh;
 }
@@ -190,13 +190,13 @@ nav {
   color: var(--with);
   opacity: 0.8;
 }
-.content-nav .logo-imge {
+.navbar .logo-imge {
   width: 100%;
   margin: 15px 0;
   text-align: center;
   display: block;
 }
-.content-nav .logo-imge img {
+.navbar .logo-imge img {
   width: 200px;
   height: 200px;
   border: 1px solid var(--mainColor);
@@ -204,7 +204,7 @@ nav {
   padding: 10px;
   transition: padding 0.4s;
 }
-.content-nav:hover img {
+.navbar :hover img {
   padding: 0px;
 }
 .navbar {
@@ -212,7 +212,7 @@ nav {
   background-color: var(--with);
   top: 0;
   bottom: 0;
-  z-index: 5;
+  z-index: 10;
   padding: 15px 25px;
   width: 30%;
 }
