--- a/css/style.css
+++ b/css/style.css
@@ -110,9 +110,9 @@ body {
   position: fixed;
   left: 0;
   top: 0;
+  bottom: 0;
+  right: 0;
   z-index: 9999999;
-  width: 100%;
-  height: 100%;
   overflow: visible;
   background: var(--with) url("../images/load/load.gif") no-repeat center center;
 }
@@ -180,7 +180,7 @@ nav {
   top: 0;
   left: 0;
   z-index: 7;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
   height: 100vh;
 }
 .logo {
@@ -195,14 +195,14 @@ nav {
   opacity: 0.8;
 }
 .navbar .logo-imge {
-  width: 100%;
-  margin: 15px 0;
+  width: 50%;
+  margin: 15px auto;
   text-align: center;
   display: block;
 }
 .navbar .logo-imge img {
-  width: 60%;
-  height: 180px;
+  width: 100%;
+  height: auto;
   border: 1px solid var(--mainColor);
   border-radius: 100%;
   padding: 10px;
@@ -340,9 +340,8 @@ nav {
     top: 0.3em;
     font-size: 1.6em;
   }
-  .navbar .logo-imge img {
-    width: 80%;
-    height: 155px;
+  .navbar .logo-imge {
+    width: 70%;
   }
 }
 /* --------------------------
