--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ header .header-content {
 /* --------------------------
 5- Start Skiils */
 .skiils {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
         url("../images/background/skills.jpg");
     color: var(--with);
 }
@@ -513,7 +513,7 @@ header .header-content {
 }
 .skiils .content-skiils .skill-box-bar:nth-child(2) .bar-skiil::after {
     content: "85%";
-    color: #ff3ec3;
+    color: #ff8fdc;
 }
 .skiils .content-skiils .skill-box-bar:nth-child(3) .bar-skiil {
     width: 85%;
@@ -576,7 +576,7 @@ header .header-content {
 }
 .skiils .content-skiils .skill-box-bar:nth-child(11) .bar-skiil::after {
     content: "60%";
-    color: #e035f5;
+    color: #a8debb;
 }
 .skiils .content-skiils .skill-box-bar .bar-skiil::before {
     content: "";
@@ -626,7 +626,7 @@ header .header-content {
 }
 .skiils .content-skiils .skill-box-bar:nth-child(11) .bar-skiil,
 .skiils .content-skiils .skill-box-bar:nth-child(11) .bar-skiil::before {
-    background-color: #e035f5;
+    background-color: #a8debb;
 }
 .skiils .content-skiils .skill-box-bar .skill-name {
     position: absolute;
