--- a/css/style.css
+++ b/css/style.css
@@ -122,11 +122,15 @@ body {
     .heading-section {
         font-size: 1.5em;
     }
+    .heading-section::after,
+    .heading-section::before {
+        width: 15%;
+    }
     .heading-section::after {
-        left: 67.5%;
+        left: 70.5%;
     }
     .heading-section::before {
-        right: 67.5%;
+        right: 70.5%;
     }
     .top {
         right: 10px;
